<resources>
    <string name="hello_world">Filler</string>
    <string name="app_name">Grade Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="rmv">Remove</string>
    <string name="title_activity_add_semester">Add Semester</string>
    <string name="year">Year:</string>
    <string name="term">Term:</string>
    <string name="can">Cancel</string>
    <string name="title_activity_remove_semester">Remove Semester</string>
    <string name="title_activity_course_view">Courses</string>
    <string name="title_activity_add_course">Add Course</string>
    <string name="title_activity_remove_course">Remove Course</string>
    <string name="coursename">Course Name:</string>
    <string name="title_activity_show_grades">Grades</string>
    <string name="title_activity_add_grade">Add Grade</string>
    <string name="title_activity_show_license">License Agreement</string>
    <string name="save">Save</string>
    <string name="ret">Return</string>
    <string name="action_license">License</string>
    <string name="action_return">Save</string>
    <string name="course">Course</string>
    <string name="distribution">Distribution</string>
    <string name="grade">Grade</string>
    <string name="title_activity_add_distribution">Add Distribution</string>
    <string name="title_activity_remove_distribution">Remove Distribution</string>
    <string name="title_activity_remove_grade">Remove Grade</string>
    <string name="title_activity_edit_grade">Edit Grade</string>
    <string name="name">Name:</string>
    <string name="type">Distribution Type</string>
    <string name="mark">Grade Received:</string>
    <string name="weight">Weight</string>
    <string-array name="distribution_array">
        <item>Assignment</item>
        <item>Project</item>
        <item>Lab</item>
        <item>Quiz</item>
        <item>Tutorial</item>
        <item>Midterm</item>
        <item>Final Exam</item>
        <item>Essay</item>
        <item>Other</item>
    </string-array>
</resources>
